first run of add experience form

--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block extra_head %}
+{% comment %}
 {{ form.media }}
+{% endcomment %}
 {% endblock %}
 
 {% block content %}
 <div class="container">
 	<div class="space30"></div>
 	<div class="column span9">
-		<h2>Add listing form</h2><!-- we can change this title based on the niche-->
+		<h1>Add listing form</h1><!-- we can change this title based on the niche-->
 		{{ form.errors }}
 		<form action="#" method="POST" enctype="multipart/form-data">
 			<fieldset class="panel">
@@ -23,22 +25,78 @@
 						</div>
 					</div>
 
-					<!--<div class="row">
+					{% comment %}
+					<div class="row">
 						<label>Category</label>
 						{{ form.category }}
-					</div>-->
+					</div>
+					{% endcomment %}
 
 					<div class="row">
 						<div>
-						<label>Description</label>
-						{{ form.description }}
-						<p class="secondary">(tell us about your cooking, the setting, yourself... anything that helps tell your story)</p>
+							<label>Description</label>
+							<div class="span6-wrapper">
+								{{ form.description }}
+							</div>
+							<p class="secondary">(tell us about your cooking, the setting, yourself... anything that helps tell your story)</p>
 						</div>
 					</div>
 				</div>
 			</fieldset>
+	
+			<div class="row">
+				<div class="span5">
+					<fieldset class="panel"><div class="pad15">
+							<h3>Available dates and times</h3>
+							<div class="row">
+								<div>
+								<label>Pick a date</label>
+								<div class="span3-wrapper">{{ form.date }}</div>
+								</div>
+							</div>
+						{% comment %}
+						{{ form.valid_until }}
+						{% endcomment %}
+						<!-- how to enable them select specific dates as well as 'from' 'to'? -->
+						<!-- the calendar here is just a place holder -->
+
+						<!--iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepickerm&file=http%3A%2F%2Fwww.instantcal.com%2Ftest.ics' allowTransparency='true' scrolling='no' frameborder=0 height=250 width=250></iframe-->
+						<div class="row">
+							<div>
+								<label>Pick available times</label>
+								<div class="span3-wrapper">{{ form.time }}</div>
+							</div>
+						</div>
+						<!-- here I want to include a better time widget, perhaps a slider like in Kayak. -->
+						<!--input type="radio" name="mornings" />Mornings<br />
+						<input type="radio" name="evenings" />Evenings<br />
+						<input type="radio" name="all_day" />All day<br /-->
+					</div></fieldset>
+				</div>
+				<div class="span4">
+					<fieldset class="panel"><div class="pad15">
+						<h3>Price and capacity</h3>
+						<div class="row">
+							<div>
+								<label>Price</label>
+								<div class="row">
+									<span>$</span><div class="span1-wrapper">{{ form.price }}</div><span>USD</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div>
+								<label for="capacity">How many people can you feed?</label>
+								<div class="span2-wrapper">{{ form.capacity }}</div>
+							</div>
+						</div>
+					</div></fieldset>
+				</div>
+			</div>
 
 			<fieldset class="panel">
+				<div class="pad15">
 				<h3>Tell your story visually</h3>
 				<div class="row">
 					<label>Upload your images</label>
@@ -54,83 +112,69 @@
 						<div class="span6-wrapper">{{ form.video_link }}</div>
 					</div>
 				</div>
+				</div>
 			</fieldset>
-			
-			
-			<fieldset class="panel">
-				<h3>Location</h3>
-				{{ form.use_saved_address }}
-				<address><!-- html 5 semantic markup -->
-					Address:
-					{{ form.address }}
-					<br />
-					<!--label>Address <input class="space_common" type="text" name="address"></label><br />
-				<label>City  <input class="space_common" type="text" name="city"></label><br />
-				<label>State
-					<select name="state">
-						<option>AL</option>
-						<option>BM</option>
-						<option>CA</option>
-						<option>PA</option>
-						<option>NY</option>
-						<option>NH</option>
-						<option>MA</option>
-					</select>
-				</label><br />
-				<label>Zip-code<input class="space_common" type="text" name="zipcode"></label><br />
-				<label>Country  <!-- eveyrthing is going to be in the U.S. for now>
-					<select name="country">
-						<option>United States</option>
-					</select>
-				</label><br /> -->
-				{{ form.xp_location }}
-			</address><br />
-		</fieldset>
-		<fieldset class="panel">
-			<h3>Available dates and times</h3>
-			<p> Pick available dates </p>
-			From:
-			{{ form.valid_from }}
-			<br />
-			Until:
-			{{ form.valid_until }}
-			<!-- how to enable them select specific dates as well as 'from' 'to'? -->
-			<!-- the calendar here is just a place holder -->
 
-			<!--iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepickerm&file=http%3A%2F%2Fwww.instantcal.com%2Ftest.ics' allowTransparency='true' scrolling='no' frameborder=0 height=250 width=250></iframe-->
-			<br />
-			<p>Pick available times</p>
-			<!-- here I want to include a better time widget, perhaps a slider like in Kayak. -->
-			<!--input type="radio" name="mornings" />Mornings<br />
-			<input type="radio" name="evenings" />Evenings<br />
-			<input type="radio" name="all_day" />All day<br /-->
-		</fieldset>
+
+			<div class="span9">	
+				<fieldset class="panel">
+					<div class="pad15">
+						<h3>Location</h3>
+						{{ form.use_saved_address }} Use my saved address
+						<p>Or enter a new address</p>
+						<address><!-- html 5 semantic markup -->
+							<div class="row">
+								<div>
+									<label>Address</label>
+									<div class="span6-wrapper">{{ form.address }}</div>
+								</div>
+							</div>
+							<!--label>Address <input class="space_common" type="text" name="address"></label><br />
+						<label>City  <input class="space_common" type="text" name="city"></label><br />
+						<label>State
+							<select name="state">
+								<option>AL</option>
+								<option>BM</option>
+								<option>CA</option>
+								<option>PA</option>
+								<option>NY</option>
+								<option>NH</option>
+								<option>MA</option>
+							</select>
+						</label><br />
+						<label>Zip-code<input class="space_common" type="text" name="zipcode"></label><br />
+						<label>Country  <!-- eveyrthing is going to be in the U.S. for now>
+							<select name="country">
+								<option>United States</option>
+							</select>
+						</label><br /> -->
+						{% comment %}
+						{{ form.xp_location }}
+						{% endcomment %}
+					</address><br />
+				</div>
+			</fieldset>
+		</div>
 		<fieldset class="panel">
-			<h3>Give more details to help people find you</h3>
-			<label>Tags</label>
-			{{ form.tags }}<!-- I need to learn how to do this... -->
-			{{ form.my_place.label_tag }}
-			{{ form.my_place }}
-			{{ form.delivery.label_tag }}
-			{{ form.delivery }}
-			{{ form.pick_up.label_tag }}
-			{{ form.pick_up }}
-		</fieldset>
-		<fieldset class="panel">
-			<h3>Price and capacity</h3>
-			<div class="row">
-				<div>
-					<label>Price</label>
-					<div class="row">
-						<span>$</span>{{ form.price }}<span>USD</span>
+			<div class="pad15">
+				<h3>Give more details to help people find you</h3>
+				<div class="row">
+					<div>
+						<label>Tags</label>
+						<div class="span6-wrapper">{{ form.tags }}</div><!-- I need to learn how to do this... -->
 					</div>
 				</div>
-			</div>
-
-			<label for="capacity">How many people can you feed?</label>
-				{{ form.capacity }}
+				{% comment %}
+				{{ form.my_place.label_tag }}
+				{{ form.my_place }}
+				{{ form.delivery.label_tag }}
+				{{ form.delivery }}
+				{{ form.pick_up.label_tag }}
+				{{ form.pick_up }}
+				{% endcomment %}
+				</div>
 			</fieldset>
-			<input class="btn" type="submit" value="View listing">
+			<input class="btn" type="submit" value="Add listing">
 		</form>
 	</div>
 </div>
