Added date time picker

--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -3,6 +3,9 @@
 {% comment %}
 {{ form.media }}
 {% endcomment %}
+<script src="{{MEDIA_URL}}js/jquery-ui-1.8.16.custom.min.js"></script>
+<script src="{{MEDIA_URL}}js/jquery-ui-timepicker-addon.js"></script>
+<link rel="stylesheet" href="{{MEDIA_URL}}css/ui-lightness/jquery-ui-1.8.16.custom.css" />
 {% endblock %}
 
 {% block content %}
