--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -4,11 +4,6 @@
 {% load x_tags %}
 
 {% block extra_head %}
-    <script type='text/javascript' src='http://www.iplocationtools.com/iplocationtools.js?key={{ IP_GEOLOCATOR_API_KEY }}' ></script>
-    <script type='text/javascript' src='/static/jq.templates.js' ></script>
-    <script type='text/javascript' src='/static/maps.js'></script>
-
-	<script type='text/javascript' src='{{ MEDIA_URL }}js/front_page.js'></script>
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/front-page.css" />
 {% endblock %}
 
@@ -29,7 +24,7 @@
 		</form>
 	</div>
 	</div>
-	
+
 	<div class="clear"></div>
 	{% include "header.html" %}
 </div>
@@ -39,7 +34,7 @@
 	<script type='text/x_jquery_templates' id='test-template'>
 		<li class="front-page-item">
 			<a href="/experiences/{% t_var slug_id %}">
-				<img alt=" {% t_var title %} "{% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %}/>
+				<img alt=" {% t_var title %} "{% t_if photo1 %}src="{% t_url photo1.url %}"{% t_endif %}/>
 			</a>
 			<div class="thumb-details">
 				<div class="fp-item-price">
@@ -60,4 +55,8 @@
 	</script>
 
 </div>
+{% endblock %}
+
+{% block extra_scripts %}
+<script type='text/javascript' src='{{ MEDIA_URL }}js/front_page.js'></script>
 {% endblock %}
