--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -3,24 +3,29 @@
 <head>
     <meta charset="utf-8">
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="{{ MEDIA_URL }}js/textwrap.plugin.js"></script>
-	<script src="{{ MEDIA_URL }}js/main.js"></script>
-	<script type="text/javascript" src="http://use.typekit.com/qzv2oav.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			image_autoscale($('.image-wrapper img'));
-		});
-	</script>
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css">
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css">
-	<title>{% block title %}{% endblock %}</title>    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
+	<title>{% block title %}{% endblock %}</title>
+
 	{% block extra_head %}{% endblock %}
+
 </head>
 <body>
-	{% block body %}
+	{% block body %}{% endblock %}
 
-	{% endblock %}
+    <script src='https://maps-api-ssl.google.com/maps/api/js?v=3&sensor=false&libraries=places' ></script>
+   	<script src="{{ MEDIA_URL }}js/textwrap.plugin.js"></script>
+   	<script src="{{ MEDIA_URL }}js/main.js"></script>
+    <script src='http://www.iplocationtools.com/iplocationtools.js?key={{ IP_GEOLOCATOR_API_KEY }}' ></script>
+    <script src='/static/jq.templates.js' ></script>
+    <script src='/static/js/jquery-ui-timepicker-addon.js' ></script>
+    <script src='/static/maps.js'></script>
+   	<script src="http://use.typekit.com/qzv2oav.js"></script>
+   	<script>try{Typekit.load();}catch(e){}</script>
+   	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
+
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
