Merchant experience listing

--- a/xperiences/experiences/templates/experiences/list_experiences.html
+++ b/xperiences/experiences/templates/experiences/list_experiences.html
@@ -1,14 +1,53 @@
 {% extends "base.html" %}
 
-{% block title %}
-    This is where you find the ultimate exprience
-{% endblock %}
+{% block title %}Search results{% endblock %}
 
 {% block content %}
-    
-        {% for item in experiences %}
-        {% comment %}<h2><a href="{% url experience_profile item.id %}">{{ item.title }} </a> by <a href="{% url merchant_profile item.merchant.slug %}">{{ item.merchant.name }}</a></h2>{% endcomment %}
-        {{ item.title }}
-        {% endfor %}
 
-{% endblock %}   
+<div class="content-body">
+    <div class="main-content">
+        <div class="command-bar-container">
+        </div>
+        <div class="two-col-left-narrow-float">
+            <div id="search-left-bar" class="panel dark">
+                <h4>Search results</h4>
+                <input type="text" class="shorter" /> near <input type="text" class="short" />
+
+                <input type="submit" class="margin-top-10" value="search again" />
+            </div>
+            <div id="map-bar" class="panel">
+                This is where the map goes
+            </div>
+            <div id="filter-bar" class="panel">
+                <h4>Filter by</h4>
+                <div><input type="checkbox" name="my_place">Option 1</div>
+                <div><input type="checkbox" name="delivery">Option 2</div>
+                <div><input type="checkbox" name="pick-up">Option 3</div>
+            </div>
+        </div>
+        <div class="two-col-right-wide">
+            <h2>There are 32 listings</h2>
+            <div class="page-nav">
+                <ul>
+                    <li>&lt;</li>
+                    <li class="active">1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>&gt;</li>
+                </ul>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+
+<script type='text/x_jquery_templates' id='res_template'>
+    <div class="search-result">
+        <img src="images/activity1.jpg">
+        <div class="price">$25</div>
+        <h4>This is an activity</h4>
+        <div class="secondary">Mary K. at San Francisco</div>
+    </div>
+</script>
+{% endblock %}
