--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -26,6 +26,8 @@
    	<script>try{Typekit.load();}catch(e){}</script>
    	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
 
+    {% block hidden_templates %}{% endblock %}
+
     {% block extra_scripts %}{% endblock %}
 </body>
 </html>
