--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -25,6 +25,21 @@
    	<script src="http://use.typekit.com/qzv2oav.js"></script>
    	<script>try{Typekit.load();}catch(e){}</script>
    	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
+	<script type="text/javascript">/* Google analytics */
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-27207596-2']);
+	_gaq.push(['_trackPageview']);
+   	(function() {
+	  var ga = document.createElement('script'); ga.type =
+   'text/javascript'; ga.async = true;
+	  ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+   'http://www') + '.google-analytics.com/ga.js';
+	  var s = document.getElementsByTagName('script')[0];
+   s.parentNode.insertBefore(ga, s);
+	})();
+   </script>
+ 
+
 
     {% block hidden_templates %}{% endblock %}
 
