--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load thumbnail %}
+{% comment %}{% load thumbnail %}{% endcomment %}
 
 {% block title %}{{ experience.title }}{% endblock %}
 
@@ -12,9 +12,8 @@
 			<div id="img-gallery">
 				<div id="exp-main-image-outer">
 					<div id="exp-main-image" class="image-wrapper"></div>
-					<div id="exp-main-image-frame"></div>
 				</div>
-				<div class="panel">
+				<div id="exp-img-thumbs">
 					<div id="exp-thumbs">
                     {% if experience.photo1 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo1.url}}">{% endif %}
                     {% if experience.photo2 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo2.url}}">{% endif %}
@@ -30,6 +29,7 @@
 		</div>
 		<div class="span4 column">
 			<h1>&nbsp;</h1>
+			<div class="row">
 			<div id="action-bar" class="panel span4 font12">
 				<div class="price">
 					${{ experience.price }}<a href="#"></a><!-- the href is for when we will quote in different currencies... thinking far ahead here :-) -->
@@ -85,29 +85,34 @@
 					<input type="submit" class="btn" value="buy" />
 				</div>
 			</div>
-			<div id="seller-info" class="panel">
-				<div class="pad15">
-				<h3>Hi! I'm {{merchant.name}}</h3>
-                <div id="merchant-image">
-                    <div class="image-wrapper" style='width:100px; height:100px; position:relative;'>
-                        <img alt="{{ merchant.name }}" src="{% if merchant.photo %}{{ merchant.photo.url }}{% else %}http://graph.facebook.com/{{ merchant.FB_ID }}/picture/?type=large{% endif %}">
-                    </div>
-                </div>
-				<a class="center btn btn-blue font14">contact me</a>
-				</div>
 			</div>
-			<div class="pad8 panel">
-				<div id="map">
-					<input type='hidden' id='location_field' value='{{ location }}' />
-				</div>
-				<div id="merchant-details">
-					<ul>
-						<li id="location">{{ merchant.city}} {{ merchant.state }}
-						<br />
-						{{ merchant.country }}
-						</li>
-					</ul>
-                </div>
+			<div class="row">
+						<div id="seller-info" class="panel">
+							<div class="pad15">
+							<h3>Hi! I'm {{merchant.name}}</h3>
+			                <div id="merchant-image">
+			                    <div class="image-wrapper" style='width:100px; height:100px; position:relative;'>
+			                        <img alt="{{ merchant.name }}" src="{% if merchant.photo %}{{ merchant.photo.url }}{% else %}http://graph.facebook.com/{{ merchant.FB_ID }}/picture/?type=large{% endif %}">
+			                    </div>
+			                </div>
+							<a class="center btn btn-blue font14">contact me</a>
+							</div>
+						</div>
+			</div>
+			<div class="row">
+						<div class="pad8 panel">
+							<div id="map">
+								<input type='hidden' id='location_field' value='{{ location }}' />
+							</div>
+							<div id="merchant-details">
+								<ul>
+									<li id="location">{{ merchant.city}} {{ merchant.state }}
+									<br />
+									{{ merchant.country }}
+									</li>
+								</ul>
+			                </div>
+						</div>
 			</div>
 			<div class="secondary">
 				<ul>
