--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -20,11 +20,11 @@
    	<script src="{{ MEDIA_URL }}js/main.js"></script>
     <script src='http://www.iplocationtools.com/iplocationtools.js?key={{ IP_GEOLOCATOR_API_KEY }}' ></script>
     <script src='/static/jq.templates.js' ></script>
-    <script src='/static/js/jquery-ui-timepicker-addon.js' ></script>
+	<!--    <script src='/static/js/jquery-ui-timepicker-addon.js' ></script> -->
     <script src='/static/maps.js'></script>
    	<script src="http://use.typekit.com/qzv2oav.js"></script>
    	<script>try{Typekit.load();}catch(e){}</script>
-   	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
+	<!--<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script> -->
 	<script type="text/javascript">/* Google analytics */
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-27207596-2']);
